force-app/main/default/objects/Reviewer_Domain_Tag__c/Reviewer_Domain_Tag__c.object-meta.xml
<CustomObject>
    <label>Reviewer Domain Tag</label>
    <nameField>
        <label>Reviewer Domain Tag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reviewer Domain Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>