force-app/main/default/objects/Reviewer_Domain_Tag__c/fields/Committee_Master__c.field-meta.xml
<CustomField>
    <fullName>Committee_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Committee Master</label>
    <referenceTo>Committee_Master__c</referenceTo>
    <relationshipLabel>Reviewer Domain Tags</relationshipLabel>
    <relationshipName>Reviewer_Domain_Tags</relationshipName>
    <type>Lookup</type>
</CustomField>