force-app/main/default/objects/Reviewer_Domain_Tag__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <referenceTo>Reviewer__c</referenceTo>
    <relationshipLabel>Reviewer Domain Tags</relationshipLabel>
    <relationshipName>Reviewer_Domain_Tags</relationshipName>
    <type>Lookup</type>
</CustomField>